fix safari flexbox gap and add backdrop-filter to the mobile navigation

--- a/css/queries.css
+++ b/css/queries.css
@@ -134,7 +134,9 @@ Instead, 1rem = 1em = 16px */
   }
 
   .main-nav {
-    background-color: rgba(255, 255, 255, 0.97);
+    background-color: rgba(255, 255, 255, 0.6);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(10px);
     position: absolute;
     top: 0;
     left: 0;
@@ -176,6 +178,14 @@ Instead, 1rem = 1em = 16px */
 
   .nav-open .icon-mobile-nav[name="menu-outline"] {
     display: none;
+  }
+
+  .arrow-down-icon {
+    transition: all 0.7s ease-in-out;
+  }
+
+  .nav-open .arrow-down-icon {
+    opacity: 0.05;
   }
 
   .main-nav-list {
@@ -306,3 +316,56 @@ Spacing system (px)
  2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 
 */
+
+/**************************/
+/* Fixing Safari flexbox gap */
+/**************************/
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+  margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+  margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-meals {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attributes:not(:last-child) {
+  margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+  margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-tags {
+  margin-right: 0.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+  margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+  margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 3.2rem;
+  }
+}
+
+@media (max-width: 59em) {
+  .no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 0;
+    margin-bottom: 4.8rem;
+  }
+}
